--- a/RegularExpression-to-NFA-to-DFA/pom.xml
+++ b/RegularExpression-to-NFA-to-DFA/pom.xml
@@ -8,4 +8,15 @@
     <artifactId>RegularExpression-to-NFA-to-DFA</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+       <resources>
+           <resource>
+               <filtering>true</filtering>
+               <directory>${basedir}/src/main/resources</directory>
+               <includes>
+                   <include>**/*.txt</include>
+               </includes>
+           </resource>
+       </resources>
+    </build>
 </project>
