--- a/problem.yml
+++ b/problem.yml
@@ -19,3 +19,17 @@ LR-and-LL:
 
 LR-parsing:
   unreviewed
+
+LL-parsing:
+  unreviewed
+
+JAVACC-parser:
+  lookahead: doubt of its occurence  (done, used for javacc to generator parser)
+
+
+top-down-parsing-and-LLparsing:
+  relationship: unknown
+
+bottom-up-parsing-and-LRparsing:
+  relationship: unknown
+
