--- a/problem.yml
+++ b/problem.yml
@@ -21,7 +21,7 @@ LR-parsing:
   unreviewed
 
 LL-parsing:
-  unreviewed
+  unreviewed (done)
 
 JAVACC-parser:
   lookahead: doubt of its occurence  (done, used for javacc to generator parser)
