--- a/problem.yml
+++ b/problem.yml
@@ -3,7 +3,7 @@ rightmost:
 
 
 first-follow:
-  calculation: for what
+  calculation: for what (half done)
 
 translation:
   recursive-descebt: 5.5.1 couldnt understand (little understand)
