--- a/problem.yml
+++ b/problem.yml
@@ -69,3 +69,8 @@ code-flow-parsing:
 
 parser-by-hand-parser-from-regularExp:
   relationship: unknown
+
+
+parser:
+  generating-process:
+    importance: very important
