--- a/problem.yml
+++ b/problem.yml
@@ -74,3 +74,7 @@ parser-by-hand-parser-from-regularExp:
 parser:
   generating-process:
     importance: very important
+
+
+parsing-strategy:
+  SLL: unreviewed
